syntax = "proto3";

package auth.v1alpha;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse) {};
  rpc Validate (ValidateRequest) returns (ValidateResponse) {};
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int32 status = 1;
  repeated string error = 2;
  string token = 3;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  int32 status = 1;
  repeated string error = 2;
  int32 userId = 3;
}